upgraded scripts to handle native access (--enable-native-access=ALL-UNNAMED) automatically based on major version of Java