@@ -118,6 +118,15 @@ do
   fi
 done
 
+# Starting with Java 17, we add --enable-native-access=ALL-UNNAMED
+MAJOR_VERSION=`java -fullversion 2>&1 | head -1 | cut -d'"' -f2 | sed 's/^1\.//' | cut -d'.' -f1`
+if [ "$MAJOR_VERSION" -ge 17 ]
+then
+  ENABLE_NATIVE_ACCESS="-jvm --enable-native-access=ALL-UNNAMED"
+else
+  ENABLE_NATIVE_ACCESS=
+fi
+
 # launch class
 "$JCMD" $JAVA_OPTS \
   -classpath "$CLASSPATH" \
@@ -135,6 +144,7 @@ done
   -jvm --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED \
   -jvm --add-exports=java.base/sun.nio.cs=ALL-UNNAMED \
   -jvm --add-exports=java.base/sun.util.calendar=ALL-UNNAMED \
+  $ENABLE_NATIVE_ACCESS \
   -main $MAIN \
   -doc-dir "$BASEDIR/docs" \
   $ARGS
